--- a/css/style.css
+++ b/css/style.css
@@ -118,17 +118,17 @@ div ul {
 
 li#text-area {
   width: 100%;
-  padding: 5px;
   border: #000;
   box-sizing: border-box;
   resize: vertical;
 }
 
-li#submit {
-  background-color: #4CAF50;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+button#submit-button:hover {
+  cursor:pointer;
+} 
+
+button img {
+width: 30px;
+height: 40px;
+padding: 0;
 }
