--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,11 @@ body {
   width: 780px;
   margin: 0 auto;
   background: #fff;
+  box-shadow: 0px 9px 13px 5px;
 }
 
 .header {
   padding: 45px 0 20px 40px;
-  border: 2px solid black;
 }
 
 .menu {
@@ -104,31 +104,48 @@ footer a {
 }
 
 #about-page .description {
-    clear: both;
-}
-
-div ul {
-  color: #000;
-  font-size: 18px;
-  text-decoration: none;
-  list-style-type: none;
-  text-align: left;
-  
-}
-
-li#text-area {
-  width: 100%;
-  border: #000;
-  box-sizing: border-box;
-  resize: vertical;
+  clear: both;
 }
 
 button#submit-button:hover {
-  cursor:pointer;
-} 
+  cursor: pointer;
+}
+
+/***************** Contact page **********/
+#contact #form {
+  width: 400px;
+  padding: 20px 20px 10px 10px;
+  margin: 0 auto;
+  box-shadow: 0px 9px 13px 5px;
+  border-radius: 5px;
+}
 
 button img {
-width: 30px;
-height: 40px;
-padding: 0;
+  width: 30px;
+  height: 40px;
+  padding: 0;
+}
+
+.page-heading {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+#contact #form input {
+  width: 100%;
+  border-radius: 5px;
+  height: 20px;
+  background: #d6d6d6;
+  /* box-shadow: 0px 9px 13px 5px; */
+}
+
+#contact #form #message {
+  width: 100%;
+  border-radius: 5px;
+  background: #d6d6d6;
+}
+
+#contact #form #submit {
+  background: #6a9fe0;
+  height: 25px;
 }
