--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,26 @@
+html.gr__localhost {
+  background: #656262;
+}
+
 body {
-  background: #f4f4f4;
   margin: 0;
 }
 
 .link-title {
   text-decoration: none;
   font-size: 24px;
-  color: #444444;
+  color: #989898;
+}
+
+.link-title:hover {
+  text-decoration: underline;
+  color: #ececec;
 }
 
 .container {
   width: 780px;
   margin: 0 auto;
-  background: #fff;
+  background: #262626;
   box-shadow: 0px 9px 13px 5px;
 }
 
@@ -27,13 +35,28 @@ body {
 }
 
 .menu a {
-  color: #c5d6db;
+  /* position: relative; */
+  padding: 0 10px;
+  /* display: inline-block; */
+  margin: 3px 0px;
+  outline: none;
+  color: #fff;
   text-decoration: none;
-  font-size: 14px;
-  font-family: "Arial Narrow", "Myriad Pro";
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 400;
+  text-shadow: 0 0 1px rgba(255, 255, 255, 0.3);
+  font-size: 13px;
 }
+
 .menu a:hover {
-  color: #ecf2f3;
+  top: 100%;
+  height: 1px;
+  background: rgb(255, 255, 255);
+  content: '';
+  opacity: 0;
+  transition: height 0.3s, opacity 0.3s, transform 0.3s;
+  transform: translateY(-20px);
 }
 
 aside {
@@ -51,18 +74,17 @@ h1 {
 
 h2 {
   color: #3b7687;
-  font-size: 15px;
+  font-size: 14px;
   margin: 20px 0 5px 0;
 }
 
 .main {
   margin: 0 0 0 180px;
   padding: 35px 40px 30px 0;
-  color: #444444;
+  color: #a09d9d;
   font-family: "Georgia, 'Times New Roman', Times, serif";
   font-size: 13px;
   line-height: 18px;
-  text-emphasis: justify;
   text-align: justify;
 }
 
@@ -72,16 +94,20 @@ h2 {
 
 footer {
   padding: 6px 40px 6px 40px;
-  background: #d6d6d6;
+  background: #3b7687;
   text-align: center;
   font-family: "Lucida Sans Unicode";
-  font-size: 11px;
-  text-decoration: right;
+  font-size: 13px;
 }
 
 footer a {
   text-decoration: none;
   color: #262626;
+}
+
+footer a:hover {
+  color: #c5d6db;
+  text-decoration: underline;
 }
 
 .separator {
