--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,7 @@ body {
 }
 
 .menu a {
-  /* position: relative; */
   padding: 0 10px;
-  /* display: inline-block; */
   margin: 3px 0px;
   outline: none;
   color: #fff;
@@ -53,7 +51,7 @@ body {
   top: 100%;
   height: 1px;
   background: rgb(255, 255, 255);
-  content: '';
+  content: "";
   opacity: 0;
   transition: height 0.3s, opacity 0.3s, transform 0.3s;
   transform: translateY(-20px);
@@ -86,6 +84,15 @@ h2 {
   font-size: 13px;
   line-height: 18px;
   text-align: justify;
+}
+
+.contact {
+  margin: 0 0 0 180px;
+  padding: 35px 40px 30px 0;
+  color: #a09d9d;
+  font-family: "Georgia, 'Times New Roman', Times, serif";
+  font-size: 13px;
+  line-height: 18px;
 }
 
 .main a:hover {
@@ -144,6 +151,9 @@ button#submit-button:hover {
   margin: 0 auto;
   box-shadow: 0px 9px 13px 5px;
   border-radius: 5px;
+  position: relative;
+  display: block;
+  padding-bottom: 30px;
 }
 
 button img {
@@ -158,11 +168,22 @@ button img {
 }
 
 #contact #form input {
-  width: 100%;
   border-radius: 5px;
   height: 20px;
   background: #d6d6d6;
   /* box-shadow: 0px 9px 13px 5px; */
+  margin: 5px 10px 10px 15px;
+}
+
+input[type="radio"] {
+  display: block;
+  bottom: 10;
+  left: 10px;
+  height: 5;
+}
+
+input[type="radio"]:last-child {
+  left: 10px;
 }
 
 #contact #form #message {
