--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ html.gr__localhost {
 }
 body {
     margin: 0;
+    text-indent: 20px;
 }
 .link-title {
     text-decoration: none;
@@ -14,7 +15,7 @@ body {
     color: #ececec;
 }
 .container {
-    width: 780px;
+    width: 1200px;
     margin: 0 auto;
     background: #262626;
     box-shadow: 0px 9px 13px 5px;
@@ -46,9 +47,17 @@ body {
 }
 aside {
     float: left;
-    width: 120px;
+    width: 160px;
     padding: 30px 0 0 40px;
 }
+
+aside a {
+    color: white;
+    text-decoration: none;
+    font-size: 12px;
+    margin: 0 auto;
+}
+
 h1 {
     margin: 0px;
     color: #869843;
@@ -166,4 +175,13 @@ input[type="radio"]:last-child {
 #contact #form #submit {
     background: #6a9fe0;
     height: 25px;
+}
+
+/***************** Clapter 1 page **********/
+
+h4.right-side {
+text-align: right;
+margin-block-start: 0;
+margin-block-end: 0;
+color: rgb(228, 92, 92);
 }
